tried to fix spacing

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -47,6 +47,8 @@ p { margin: 0 0 20px; line-height: 1.8; }
 #social { 
     align-items: center; word-spacing: .42in; 
 }
+.bodyIcons{  word-spacing: .42in; }
+
 a.contact-links:hover{ color:rgba(204, 52, 103, 1); }
 
 .content { padding-right: 0px; padding-left: 0px; }
